--- a/second/2.md
+++ b/second/2.md
@@ -36,5 +36,7 @@
 ### 이벤트
 
 -  이벤트 속성 onClick, onChange 와 같이 대문자 표기. (카멜 표기)
--  속성 값으로 함수 객체를 전달.
+-  이벤트 속성 값으로 함수 객체를 전달.
+   1, 선언된 함수를 변수로 전달,->선언된 함수는 이벤트 사용할 때 인자로 e선언한다.
+   2, 속성값으로 직접 함수를 정의 : => 함수 형식으로 한다.
 -  HTML DOM 요소에만 이벤트 설정함. 
